--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: var(--off-white);
+  color: var(--grey3);
+}
+
+.dark-mode {
+  background-color: var(--grey3);
+  color: var(--off-white);
+}
+
+.dark-mode-paragraph {
+  color: var(--off-white);
 }
 
 html {
@@ -34,6 +45,59 @@ p {
 a,
 .btn {
   transition: all 300ms ease;
+}
+
+
+
+/* Light/Darkmode */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked+.slider {
+  background-color: #2196F3;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 /* DESKTOP NAV */
@@ -59,6 +123,10 @@ a {
   color: var(--black);
   text-decoration: none;
   text-decoration-color: var(--white);
+}
+
+a.dark-mode {
+  color: var(--off-white);
 }
 
 a:hover {
